--- a/API/templates/index.html
+++ b/API/templates/index.html
@@ -58,26 +58,44 @@
             </td>
         </tr>
         <tr>
-            <td>Add a comment to Question</td>
+            <td>Update question</td>
             <td>
-                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1/comments">
-                    https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1/comments
+                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1">
+                    https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1
                 </a>                
             </td>
         </tr>
         <tr>
-            <td>Add a comment to an answer</td>
+            <td>Update an answer</td>
             <td>
-                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/answers/1/comments">
-                    https://stack-overflow-lite-11.herokuapp.com/api/v1/answers/1/comments
+                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1/answers/1">
+                    https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1/answers/1
                 </a>                
             </td>
         </tr>
         <tr>
-            <td>Get Comments</td>
+            <td>Get User Questions</td>
             <td>
-                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/comments">
-                    https://stack-overflow-lite-11.herokuapp.com/api/v1/comments
+                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/users/questions">
+                    https://stack-overflow-lite-11.herokuapp.com/api/v1/users/questions
+                </a>
+                
+            </td>
+        </tr>
+        <tr>
+            <td>Get User Answers</td>
+            <td>
+                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/users/answers">
+                    https://stack-overflow-lite-11.herokuapp.com/api/v1/users/answers
+                </a>
+                
+            </td>
+        </tr>
+        <tr>
+            <td>Delete a question</td>
+            <td>
+                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1">
+                    https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1
                 </a>
                 
             </td>
