Revert "Add comments end points (#4)"
This reverts commit 9ba8bade97db32be810b8658d0f91ccbfe0dd1b4.

--- a/API/templates/index.html
+++ b/API/templates/index.html
@@ -58,44 +58,26 @@
             </td>
         </tr>
         <tr>
-            <td>Update question</td>
+            <td>Add a comment to Question</td>
             <td>
-                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1">
-                    https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1
+                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1/comments">
+                    https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1/comments
                 </a>                
             </td>
         </tr>
         <tr>
-            <td>Update an answer</td>
+            <td>Add a comment to an answer</td>
             <td>
-                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1/answers/1">
-                    https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1/answers/1
+                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/answers/1/comments">
+                    https://stack-overflow-lite-11.herokuapp.com/api/v1/answers/1/comments
                 </a>                
             </td>
         </tr>
         <tr>
-            <td>Get User Questions</td>
+            <td>Get Comments</td>
             <td>
-                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/users/questions">
-                    https://stack-overflow-lite-11.herokuapp.com/api/v1/users/questions
-                </a>
-                
-            </td>
-        </tr>
-        <tr>
-            <td>Get User Answers</td>
-            <td>
-                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/users/answers">
-                    https://stack-overflow-lite-11.herokuapp.com/api/v1/users/answers
-                </a>
-                
-            </td>
-        </tr>
-        <tr>
-            <td>Delete a question</td>
-            <td>
-                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1">
-                    https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1
+                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/comments">
+                    https://stack-overflow-lite-11.herokuapp.com/api/v1/comments
                 </a>
                 
             </td>
